src/test/deca/context/invalid/method_nameofclass.deca
//ERROR :7
class A{

}
class B{

int A(){
    return 5;
}
}